@@ -2,7 +2,6 @@ package com.kodilla.exception.homework;
 
 import java.util.ArrayList;
 import java.util.List;
-import java.util.stream.Collectors;
 
 
 public class Warehouse {
@@ -10,7 +9,6 @@ public class Warehouse {
     List<Order> orderList = new ArrayList<>();
 
     public void addOrder(Order order) {
-
         orderList.add(order);
     }
 
@@ -18,11 +16,14 @@ public class Warehouse {
         List<Order> checkOrder = orderList
                 .stream()
                 .filter(order -> order.getNumber().equals(number))
-                .collect(Collectors.toList());
+                .toList();
 
-        if (checkOrder.isEmpty())
-            return checkOrder.get(0);
+            for (Order order : orderList) {
+                if (order.getNumber().equals(number));
+                return order;
+            }
             throw new OrderDoesntExistException();
+
 
         }
     }
@@ -36,6 +37,10 @@ public class Warehouse {
 
 
 
-    }
 
-}
+
+
+
+
+
+
